<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.naio.canreaderpushthebutton.activities.MainActivity" >

    <TextView
        android:id="@+id/txt_appuyer"
        android:layout_width="@dimen/nexus7_1200px_w"
        android:layout_height="@dimen/nexus7_700px_h"
        android:layout_centerInParent="true"
        android:text="@string/instruction"
        android:textSize="25dp" />
    
    <Button
        android:id="@+id/button_connect_main_activity"
        android:layout_width="@dimen/nexus7_500px_w"
        android:layout_height="@dimen/nexus7_300px_w"
        android:layout_centerInParent="true"
        android:onClick="button_go_clicked"
        android:text="@string/button_debuter"
        android:background="@drawable/buttonselector"
        android:textSize="25dp" />
    
    <TextView
        android:id="@+id/txt_test"
        android:layout_width="@dimen/nexus7_1200px_w"
        android:layout_height="@dimen/nexus7_700px_h"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="..."
        android:textSize="25dp" />

    <TextView
        android:id="@+id/button_reset_main_activity"
        android:layout_width="@dimen/nexus7_400px_w"
        android:layout_height="@dimen/nexus7_100px_h"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="button_read_clicked"
        android:text="@string/button_recommencer"
        android:clickable="true"
        android:textSize="25dp"
        android:gravity="center"
        android:background="@drawable/buttonselector"
        android:drawableLeft="@drawable/restart2"
        android:padding="2dp" />

    <LinearLayout
        android:id="@+id/layout_result"
        android:layout_width="@dimen/nexus7_1200px_w"
        android:layout_height="@dimen/nexus7_700px_h"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_brain"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_brain"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_gps"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_gps"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_gsm"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_gsm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_ihm"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_ihm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_imu"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_imu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_son"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_son"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_tension"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_tension"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_verin"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_verin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_odo"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_odo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checklist_manette"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/im_manette"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:src="@drawable/vcheck" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>